GNOME Bugzilla – Bug 689923
Missing null-check in GtkEntryAccessible
Last modified: 2012-12-09 12:35:23 UTC
According to docs (and facts) gtk_entry_get_icon_name() might return a NULL value, so we should always check that before using it with atk_object_set_name()
Created attachment 231058 [details] [review] Patch proposal Here comes the patch
This problem has been fixed in the development version. The fix will be available in the next major software release.